--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@
 
         </div>
 
-        <div class="rs-banner wavebanner style3 modify2">
+        <div class="rs-banner new_banner wavebanner style3 modify2">
       
             <div class="container justify-content-center ">
                <div class="herocontent">
@@ -309,8 +309,8 @@
                             </ul> -->
                         </div>
                </div>
-               <div class="twosections d-flex mt-3 justify-content-center align-items-center mr-5 ">
-                <div class="banner-img1 d-flex justify-content-center flex-column">
+               <div class="twosections d-flex ">
+                <!-- <div class="banner-img1 d-flex justify-content-center flex-column">
                     <h2>Loaded features, future Ready</h2>
                             <ul>
                                 <li class="custom3"> <img src="./assets/cloud.png"  alt=""><strong>Step1: </strong>Add your cloud subscription (any cloud even Multi-cloud aws,azure,gcp).</li>
@@ -318,13 +318,28 @@
                                 <li class="custom3"> <img src="./assets/spped.png"  alt=""><strong>Step3: </strong>On-boarding - just giving few details about your project - tech stack, code branch etc.</li>
                             </ul>
                   
-                        </div>
-                <div class="banner-img bimg2 d-flex  justify-content-center2" >
+                        </div> -->
+                            <div class="firstcontent">
+                               <h2>Loaded features, future Ready</h2>
+                               <div class="points ">
+                                <div class="single-itemm custom3 d-flex align-items-start ">
+                                    <img src="./assets/cloud-removebg-preview.png"   alt=""><p><strong>Step1: </strong>Add your cloud subscription (any cloud even Multi-cloud aws,azure,gcp).</p> 
+                                </div>
+                                 <div class="single-itemm custom3  d-flex align-items-start">
+                                    <img src="./assets/code.png"  alt=""><p><strong>Step2: </strong>Configure your code repo. (any repo github,Bitbucket).</p> 
+                                </div>
+                                 <div class="single-itemm custom3  d-flex align-items-start">
+                                    <img src="./assets/spped.png"  alt=""><p><strong>Step3: </strong>On-boarding - just giving few details about your project - tech stack, code branch etc.</p> 
+                                </div>
+                               </div>
+                            </div>
+
+                <div class="videocontainer" >
                             <!-- <img src="assets/images/banner/banner-5.png" alt=""> -->
                              <iframe  class="myoutube "
                 width="450px"
                 height="250px"
-                    src="https://www.youtube.com/embed/Q_1ngqFkk7A"
+                    src="https://www.youtube.com/embed/io1ZihLjiQI"
                     title="YouTube video player" frameborder="0"
                     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                     allowfullscreen></iframe>
