--- a/index.html
+++ b/index.html
@@ -912,7 +912,7 @@
 
 
 
-    <div id="rs-testimonial" class="rs-testimonial ">
+   <!-- <div id="rs-testimonial" class="rs-testimonial ">
         <div class="container">
             <div class="sec-title2 text-center Faustina mb-45">
 
@@ -1107,7 +1107,7 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </div> -->
 
         <div class="rs-cta style1 bg7 pt-70 pb-70">
             <div class="container">
