--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
                                 <div class="col-lg-1">
                                     <div class="logo-part mt-3">
 
-                                        <a href="index.html"><img src="assets/images/DEVOZY.png" alt="logo" width="120px"></a>
+                                        <a href="index.html"><img src="img/yozy.png" alt="logo" width="120px"></a>
 
                                     </div>
                                 </div>
@@ -275,7 +275,7 @@
                <div class="herocontent">
      
             <div class="banner-content mt-0">
-                          <!--  <div class="d-flex justify-content-center">
+                        <div class="d-flex justify-content-center">
 
                                 <ul id="menu12">
                                     <li class="text-dark">D</li>
@@ -286,7 +286,7 @@
                                     <li class="text-primary">Y</li>
                                 </ul>
                             </div>
-                            <div class="d-flex justify-content-center">
+                          <!--    <div class="d-flex justify-content-center">
                                 <img src="img/line4.png" max-height="10px" width="250px">
                             </div> -->
 
