--- a/index.html
+++ b/index.html
@@ -303,8 +303,8 @@
                             </P>
                          
                         
-                            <p class="text-center"><a id="knowbtn" class="readon learn-more   px-10 py-1" href="#rs-testimonial">Know more</a></p>
-<!-- 
+                          <!--   <p class="text-center"><a id="knowbtn" class="readon learn-more   px-10 py-1" href="#rs-testimonial">Know more</a></p>
+
                             <ul class="banner-btn text-center">
                                 <li><a id="knowbtn" class="readon px-10 py-1 learn-more " href="#rs-testimonial">Know more</a>
                                 </li>
@@ -912,7 +912,7 @@
 
 
 
-   <!-- <div id="rs-testimonial" class="rs-testimonial ">
+ <div id="rs-testimonial" class="rs-testimonial ">
         <div class="container">
             <div class="sec-title2 text-center Faustina mb-45">
 
@@ -931,7 +931,7 @@
                                 <!-- <h3 class="title title4 white-color text-left   pb-30" id="paraimag">
                                     What is the main benefit of DevSecOps in Enterprises?</h3> -->
                                 <p class="title title4 white-color text-left " id="paraimag2"> &nbsp;&nbsp;
-                                    Now DEVOZY subscription comes with mobile app - the convenient way to access your CICD jobs, application infra, quality gates reports, dashboards, schedule or perform deployments, monitoring & track deployment status and much more. Enquire us for more details about DevSecOps is on the go while mobile - first time in the world</p>
+                                    Explore more our DEVOZY mobile app - the convenient way to access your CICD jobs, application infra, quality gates reports, dashboards, schedule or perform deployments, monitoring & track deployment status and much more.</p>
                             </div>
                         </div>
                         <div class="col-lg-5 kkkk">
@@ -1107,7 +1107,7 @@
                     </div>
                 </div>
             </div>
-        </div> -->
+        </div>
 
         <div class="rs-cta style1 bg7 pt-70 pb-70">
             <div class="container">
