--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
     <meta charset="utf-8">
     <title>Devozy | Enterprise DevSecOps Accelerator Platform</title>
     <meta name="description" content="Devozy - Enterprise DevSecOps platform that empowers enterprise to accelerate the overall return on software development through faster software delivery!">
+    <link rel="canonical" href="https://www.devozy.tech/" />
     <!-- responsive tag -->
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
