--- a/thankyou.html
+++ b/thankyou.html
@@ -92,7 +92,7 @@
           <script>
     function redirectToPreviousPageWithDelay() {
       setTimeout(function() {
-        window.history.back();
+        window.location.href = "https://devozy.ai/";
       }, 5000); // 5000 milliseconds = 5 seconds
     }
 
