--- a/request-demo.html
+++ b/request-demo.html
@@ -508,8 +508,7 @@
                 <div class="row align-items-start justify-content-between">
                     <div class="col-xl-5 col-lg-5 col-md-12 order-1 order-lg-0">
                         <div class="testimonial-tab-slider-wrap mt-5 ins-title ">
-                            <h1 class="fw-bold text-dark display-5">Experience Our Product in Action <mark> Request a
-                                    Demo</mark> Now !!</h1>
+                            <h1 class="fw-bold text-dark display-5">Experience Our Product in Action <mark> Register</mark> Now!!</h1>
                             <p>Unlock the power of innovation firsthand with our cutting-edge solutions. Witness how our
                                 technology can transform your business. Request a personalized demo now and embark on a
                                 journey to redefine possibilities.</p>
