--- a/index.html
+++ b/index.html
@@ -45,7 +45,29 @@
     <link rel="stylesheet" href="assets/css/custom.css">
     <!--custom css end-->
 
+
+
+    <!-- Google Tag Manager -->
+    <script>
+        (function (w, d, s, l, i) {
+            w[l] = w[l] || [];
+            w[l].push({
+                'gtm.start': new Date().getTime(),
+                event: 'gtm.js'
+            });
+            var f = d.getElementsByTagName(s)[0],
+                j = d.createElement(s),
+                dl = l != 'dataLayer' ? '&l=' + l : '';
+            j.async = true;
+            j.src =
+                'https://www.googletagmanager.com/gtm.js?id=' + i + dl;
+            f.parentNode.insertBefore(j, f);
+        })(window, document, 'script', 'dataLayer', 'G-GJ5SBGF06Q');
+    </script>
+    <!-- End Google Tag Manager -->
+
     <!-- internalcss -->
+
 
     <style>
         @keyframes moveUP {
@@ -4003,7 +4025,6 @@
 
 
 
-
     <!--build:js-->
     <script src="assets/js/vendors/jquery-3.6.0.min.js"></script>
     <script src="assets/js/vendors/bootstrap.bundle.min.js"></script>
@@ -4013,6 +4034,11 @@
     <script src="assets/js/vendors/aos.js"></script>
     <script src="assets/js/vendors/massonry.min.js"></script>
     <script src="assets/js/app.js"></script>
+    <!-- Google Tag Manager (noscript) -->
+    <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=G-GJ5SBGF06Q" height="0" width="0"
+            style="display:none;visibility:hidden"></iframe></noscript>
+    <!-- End Google Tag Manager (noscript) -->
+
     <!--endbuild-->
 </body>
 
