--- a/index.html
+++ b/index.html
@@ -10,16 +10,16 @@
     <meta name="twitter:site" content="@devozy">
     <meta name="twitter:creator" content="@devozy">
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="Devozy | Enterprise DevSecOps Accelerator Platform">
+    <meta name="twitter:title" content="Devozy | Agile DevSecOps & Platform Engineering for Rapid Software Delivery">
     <meta name="twitter:description"
         content="Devozy - Enterprise DevSecOps platform that empowers enterprise to accelerate the overall return on software development through faster software delivery">
     <meta name="twitter:image" content="#">
 
     <!--facebook og-->
     <meta property="og:url" content="#">
-    <meta name="twitter:title" content="Devozy | Enterprise DevSecOps Accelerator Platform">
+    <meta name="twitter:title" content="Devozy | Agile DevSecOps & Platform Engineering for Rapid Software Delivery">
     <meta property="og:description"
-        content="Devozy - Enterprise DevSecOps platform that empowers enterprise to accelerate the overall return on software development through faster software delivery">
+        content="Devozy - Enterprise Agile DevSecOps platform engineering automations that empowers engineering team to accelerate software development through faster software delivery">
     <meta property="og:image" content="#">
     <meta property="og:image:secure_url" content="#">
     <meta property="og:image:type" content="image/png">
@@ -28,14 +28,14 @@
 
     <!--meta-->
     <meta name="description"
-        content="Devozy - Enterprise DevSecOps platform that empowers enterprise to accelerate the overall return on software development through faster software delivery">
+        content="Devozy - Enterprise Agile DevSecOps platform engineering automations that empowers engineering team to accelerate software development through faster software delivery">
     <meta name="author" content="devozy">
 
     <!--favicon icon-->
     <link rel="icon" href="assets/img/logos/loder.png" type="image/png" sizes="16x16">
 
     <!--title-->
-    <title>Devozy | Enterprise DevSecOps Accelerator Platform</title>
+    <title>Devozy | Agile DevSecOps & Platform Engineering for Rapid Software Delivery</title>
 
     <!--build:css-->
     <link rel="stylesheet" href="assets/css/main.css">
@@ -816,9 +816,9 @@
                 <div class="row align-items-center justify-content-lg-between">
                     <div class="col-xl-5 col-lg-5">
                         <div class="hero-content-wrap text-center text-xl-start text-lg-start" data-aos="fade-right">
-                            <h1 class="fw-bold display-5"> Unified DevSecOps Automation</h1>
-                            <p class="lead">Fueling Innovation: Your Ultimate Unified Platform for Enterprise DevSecOps,
-                                Multi-Cloud Power, Agile Excellence, and ITSM Synergy</p>
+                            <h1 class="fw-bold display-5"> World Class Agile DevSecOps & Platform Engineering Automations</h1>
+                            <p class="lead">Empower Your IT Engineering Team: End to end automations Platform for faster software delivery through Agile Project Managment, DevSecOps CICD, Platform Engineering 
+                                Eco System to ship over multi-cloud & IaC capabilities</p>
                             <div
                                 class="hero-subscribe-form-wrap pt-4 position-relative m-auto m-xl-0  d-md-block d-lg-block d-xl-block">
                                 <form id="subscribe-form" name="email-form"
@@ -2388,12 +2388,12 @@
                     <div class="row align-items-center g-5 g-xl-3">
                         <div class="col-xl-6">
                             <div class="crm-title">
-                                <span class="crm-subtitle" style="font-weight: 700; font-size: 2.5rem;"> Devozy <img
+                                <span class="crm-subtitle" style="font-weight: 700; font-size: 2.5rem;"> Devozy.ai <img
                                         src="assets/img/shape/arrow-red.png" alt="arrow" class="ms-1"></span>
                                 <p class="text-white mb-0">Experience the ultimate all-in-one solution that encompasses
-                                    project management, IT Service Management (ITSM), DevSecOps, and Infrastructure
-                                    Management. Seamlessly address any challenge, streamline operations, and foster
-                                    innovation with our comprehensive suite. Join us in simplifying complexity!</p>
+                                    Agile project management, DevSecOps CICD Pipelines, Environment provisioning, Infrastructure
+                                    as Code (IaC), Track incidents/problems/changes. Platform Engineering to Seamlessly address any challenges of your IT Engineering team, streamline IT operations, and foster
+                                    innovation with our comprehensive connected suite. Join us in simplifying complexity!</p>
                                 <a href="request-demo.html" class="mt-40 btn crm-primary-btn">Get Started</a>
                             </div>
                         </div>
@@ -2416,7 +2416,7 @@
                                                     </div>
                                                 </span>
                                                 <!-- <h3 class="mt-3 mb-1"><span class="counter">4.5</span>k+</h3> -->
-                                                <p class="mb-0">Agile Project Management</p>
+                                                <p class="mb-0">Agile Project Management - Kanban board</p>
                                             </div>
                                         </div>
                                         <div class="col-lg-12">
@@ -2438,7 +2438,7 @@
 
                                                 </span>
                                                 <!-- <h3 class="mt-3 mb-1"><span class="counter">15</span>k+</h3> -->
-                                                <p class="mb-0">DevSecOps</p>
+                                                <p class="mb-0">DevSecOps - CICD Pipelines / Project Environments</p>
                                             </div>
                                         </div>
                                     </div>
@@ -2458,7 +2458,7 @@
 
                                                 </span>
                                                 <!-- <h3 class="mt-3 mb-1"><span class="counter">55</span>k+</h3> -->
-                                                <p class="mb-0">Infra Management</p>
+                                                <p class="mb-0">Infra Management - Multi-Cloud / IaC</p>
 
                                             </div>
                                         </div>
@@ -2476,7 +2476,7 @@
                                                     </div>
                                                 </span>
                                                 <!-- <h3 class="mt-3 mb-1"><span class="counter">175</span>k+</h3> -->
-                                                <p class="mb-0">IT Service Management</p>
+                                                <p class="mb-0">IT Service Management - Incidents, Problems, Changes</p>
                                             </div>
                                         </div>
                                     </div>
@@ -2499,11 +2499,11 @@
                     <div class="col-md-10 col-lg-8">
                         <div class="section-heading text-center mb-4">
                             <h5 class="h6 text-primary">Features</h5>
-                            <h2>Cutting-edge Features and Advanced Analytics</h2>
-                            <p>Elevate project delivery through Agile methodologies for adaptability. Our holistic
-                                DevSecOps ensures security without hindering development speed. Seamlessly manage
-                                multi-cloud environments for peak performance. Unify ITSM processes, fostering
-                                collaboration, all within a single, data-driven dashboard.</p>
+                            <h2>Cutting-edge AI Features and Advanced Analytics</h2>
+                            <p>Elevate IT software delivery through Agile Project Management for adaptability. Our holistic
+                                DevSecOps ensures readymade IaC & CICD automations for faster software delivery with 10x developmenet speed. Seamlessly manage
+                                multi-cloud environments & cloud resources such as VM, databases, containers. Unify Agile project development process, fostering
+                                collaboration, high end automations, all within a single, data-driven intellegent AI platform.</p>
                         </div>
                     </div>
                 </div>
@@ -2512,20 +2512,20 @@
                         <ul class="nav justify-content-center feature-tab-list mt-4" id="nav-tab" role="tablist">
                             <li class="nav-item">
                                 <a class="nav-link active" href="#tab-1" data-bs-toggle="tab" data-bs-target="#tab-1"
-                                    role="tab" aria-selected="true">DevSecOps</a>
+                                    role="tab" aria-selected="true">DevSecOps CICD</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="#tab-2" data-bs-toggle="tab" data-bs-target="#tab-2"
-                                    role="tab" aria-selected="false"> Multi-Cloud</a>
+                                    role="tab" aria-selected="false"> Multi-Cloud / IaC</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="#tab-3" data-bs-toggle="tab" data-bs-target="#tab-3"
-                                    role="tab" aria-selected="false">Agile</a>
+                                    role="tab" aria-selected="false">Agile Project Management</a>
                             </li>
 
                             <li class="nav-item">
                                 <a class="nav-link" href="#tab-4" data-bs-toggle="tab" data-bs-target="#tab-4"
-                                    role="tab" aria-selected="false">ITSM</a>
+                                    role="tab" aria-selected="false">Incidents/Problems/Changes</a>
                             </li>
                             <!-- <li class="nav-item">
                         <a class="nav-link" href="#tab-5" data-bs-toggle="tab" data-bs-target="#tab-5" role="tab" aria-selected="false">Unified Dashboard</a>
