--- a/index.html
+++ b/index.html
@@ -2500,11 +2500,11 @@
                     <div class="col-md-10 col-lg-8">
                         <div class="section-heading text-center mb-4">
                             <h2>Developer Self-service Portal: Cutting-edge AI Features with Connected View</h2>
-                            <p align="justify">Developers and Engineering team can elevate IT software delivery through Agile Project Management featrures such as Kanban board, stories, tasks, sprints and project reports.
-                                DevSecOps ensures readymade IaC & CICD automations for faster software delivery with 10x developmenet speed. Seamlessly manage
-                                multi-cloud environments & cloud resources such as VM, databases, containers. Unify Agile project development process, fostering
-                                collaboration, high end automations, all within a single, data-driven intellegent AI platform. 
-                                Connected view provides sprints, stories, production incidents, CICD Pipelines, Code repository, project environments / servers.
+                            <p align="justify">Developers and IT Engineering team can elevate IT software delivery through Agile Project Management features such as Kanban board, 
+                                stories, tasks, sprints and project reports. DevSecOps ensures readymade IaC & CICD automations for faster software delivery with 10x development 
+                                speed. Seamlessly manage multi-cloud environments & cloud resources such as VM, databases, containers. Unify Agile project development process, 
+                                fostering collaboration, high end automations, all within a single, data-driven intelligent AI platform. Connected view provides sprints, stories, 
+                                production incidents, CICD Pipelines, Code repository, project environments / servers.
                             </p>
                         </div>
                     </div>
@@ -2538,7 +2538,7 @@
                                 <div class="row justify-content-center text-center p-50 pb-0">
                                     <div class="col-lg-8">
                                         <div class="feature-tab-info">
-                                            <p class="lead">Developers & IT Engineering teams to use the self service Agile DevSecOps platform 
+                                            <p class="lead">Developers & IT Engineering teams to use the self-service Agile DevSecOps platform 
                                                 to speed up the software project delivery 10x times. Easy to use readymade automations is a convenient and easy way to access 
                                                 CICD pipelines, project environments to perform code deployments, code scan, automation testing. Update Stories / tasks, progress 
                                                 and run deployments from Kanban board. 
