--- a/index.html
+++ b/index.html
@@ -817,8 +817,8 @@
                     <div class="col-xl-5 col-lg-5">
                         <div class="hero-content-wrap text-center text-xl-start text-lg-start" data-aos="fade-right">
                             <h1 class="fw-bold display-5"> World Class Agile DevSecOps & Platform Engineering Automations</h1>
-                            <p class="lead" align=" justify">Empower Your IT Engineering Team & Developers: Self service portal provides Agile DevSecOps & Platform Engineering Eco System for faster software 
-                                delivery through Agile Project Managment, Readymade CICD Pipelines, Environment provisioning in multi-cloud & IaC capabilities</p>
+                            <p class="lead" align=" justify">Empower Your IT Engineering Team & Developers: Self-service portal provides Agile DevSecOps & Platform Engineering Eco System for faster software 
+                                delivery through Agile Project Management, Readymade CICD Pipelines, Environment provisioning in multi-cloud & IaC capabilities</p>
                             <div
                                 class="hero-subscribe-form-wrap pt-4 position-relative m-auto m-xl-0  d-md-block d-lg-block d-xl-block">
                                 <form id="subscribe-form" name="email-form"
