--- a/index.html
+++ b/index.html
@@ -3097,26 +3097,27 @@
                 <div class="row align-content-center justify-content-center">
                     <div class="col-lg-6 col-md-12">
                         <div class="section-heading mb-5">
-                            <h2>We Are Presenting Cutting edge ITSM tool </h2>
-                            <p>Yozy Technologies takes pride in presenting a cutting-edge ITSM tool that transforms the
-                                landscape
-                                of IT service management for organizations. Our ITSM tool offers a holistic array of
-                                functionalities</p>
+                            <h2>Manager Your Production Incidents, Problems, Changes </h2>
+                            <p> Presents a comprehensive ITSM tool within its platform, offering functionalities like 
+                                incident and problem management, change management, and comprehensive service 
+                                management. This integration could be highly beneficial for organizations looking to
+                                streamline their IT service management with their DevSecOps processes.</p>
                         </div>
 
                         <div class="app-two-feature-two-content mt-0 ">
                             <ul class="list-unstyled d-flex flex-wrap flex-column   mt-4" data-aos="fade-up"
                                 data-aos-delay="50">
                                 <li class="py-1">
-                                    <i class="fas fa-check-circle me-2"></i>Profound incident and problem management
+                                    <i class="fas fa-check-circle me-2"></i>Incident management
                                 </li>
                                 <li class="py-1">
-                                    <i class="fas  fa-check-circle me-2"></i>Effective change management
+                                    <i class="fas fa-check-circle me-2"></i>Problem management
                                 </li>
                                 <li class="py-1">
-                                    <i class="fas fa-check-circle me-2"></i>Comprehensive service management
-                                    encompassing assets, access, and a diverse range of
-                                    general requests
+                                    <i class="fas  fa-check-circle me-2"></i>Change management
+                                </li>
+                                <li class="py-1">
+                                    <i class="fas fa-check-circle me-2"></i>Service Requests - Access, Assets allocation and Generic requests                                 
                                 </li>
 
                             </ul>
