changes by business
changes by business

--- a/request-demo.html
+++ b/request-demo.html
@@ -280,20 +280,22 @@
                                     </div>
                                 </div> -->
                             </li>
-                            <li><a href="index.html#premium_devozy_feature" class="nav-link">Features</a></li>
-
+                            <li><a href="#premium_devozy_feature" class="nav-link">Product</a></li>
                             <li class="nav-item dropdown">
                                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
                                     data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                    Resources
+                                    Blog
                                 </a>
                                 <div class="dropdown-menu border-0 mt-1 rounded-custom shadow py-1 bg-white">
-                                    <a class="dropdown-item drop-title" href="Faq.html">FAQ</a>
-                                    <a class="dropdown-item" href="contact-us.html">Contact Us</a>
-
+                                    <a target="_blank" class="dropdown-item drop-title" href="blog/devops_platform_engineering.html">DevSecOps Platform Engineering</a>
+                                    <a target="_blank" class="dropdown-item" href="blog/devops_vs_devsecops.html">DevOps Vs DevSecOps</a>
+                                    <a target="_blank" class="dropdown-item" href="blog/devozy_advantages.html">Devozy Advantages</a>
+                                    <a target="_blank" class="dropdown-item" href="blog/devozy_Setup.html">Devozy Setup</a>
+                                    <a target="_blank" class="dropdown-item" href="blog/devozy_trend.html">DevOps Trends</a>
                             </li>
-                            <li><a href="index.html#Pricing" class="nav-link">Pricing</a></li>
-                            <li><a target="_blank" href="https://yozytech.com/" class="nav-link">company</a></li>
+                            <li><a href="#Pricing" class="nav-link">Pricing</a></li>
+                            <li><a href="faq.html" class="nav-link">FAQ</a></li>
+                            <li><a href="contact-us.html" class="nav-link">Contact</a></li>
                             <!-- <li class="nav-item dropdown">
                                 <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Company</a>
                                 <div class="dropdown-menu border-0 rounded-custom shadow py-0 bg-white">
@@ -494,7 +496,7 @@
                     <div class="action-btns mt-4 ps-3">
                         <a href="https://web.devozy.ai/login" target="_blank" class="btn btn-outline-primary me-2">Sign
                             In</a>
-                        <a href="request-demo.html" target="_blank" class="btn btn-primary">Get Started</a>
+                        <a href="request-demo.html" target="_blank" class="btn btn-primary">Request Demo</a>
                     </div>
                 </div>
             </div>
@@ -508,8 +510,8 @@
                 <div class="row align-items-start justify-content-between">
                     <div class="col-xl-5 col-lg-5 col-md-12 order-1 order-lg-0">
                         <div class="testimonial-tab-slider-wrap mt-5 ins-title ">
-                            <h1 class="fw-bold text-dark display-5">Experience Our Product in Action <mark> Register</mark> Now!!</h1>
-                            <p>Unlock the power of innovation firsthand with our cutting-edge solutions. Witness how our
+                            <h1 class="fw-bold text-dark display-5">Experience the <mark>Devozy.ai</mark> Platform<mark> Request</mark> Demo!!</h1>
+                            <p>Unlock the power of innovation - The modern software delivery platform & Developer Experience Unleashed. Witness how our
                                 technology can transform your business. Request a personalized demo now and embark on a
                                 journey to redefine possibilities.</p>
                             <hr>
