--- a/contact-us.html
+++ b/contact-us.html
@@ -35,7 +35,7 @@
     <link rel="icon" href="assets/img/logos/loder.png" type="image/png" sizes="16x16">
 
     <!--title-->
-    <title>Contact Us - devozy</title>
+    <title>Contact - Team Devozy</title>
 
     <!--build:css-->
     <link rel="stylesheet" href="assets/css/main.css">
@@ -280,20 +280,22 @@
                                     </div>
                                 </div> -->
                             </li>
-                            <li><a href="index.html#premium_devozy_feature" class="nav-link">Features</a></li>
-
+                            <li><a href="#premium_devozy_feature" class="nav-link">Product</a></li>
                             <li class="nav-item dropdown">
                                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
                                     data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                    Resources
+                                    Blog
                                 </a>
                                 <div class="dropdown-menu border-0 mt-1 rounded-custom shadow py-1 bg-white">
-                                    <a class="dropdown-item drop-title" href="Faq.html">FAQ</a>
-                                    <a class="dropdown-item" href="contact-us.html">Contact Us</a>
-
+                                    <a target="_blank" class="dropdown-item drop-title" href="blog/devops_platform_engineering.html">DevSecOps Platform Engineering</a>
+                                    <a target="_blank" class="dropdown-item" href="blog/devops_vs_devsecops.html">DevOps Vs DevSecOps</a>
+                                    <a target="_blank" class="dropdown-item" href="blog/devozy_advantages.html">Devozy Advantages</a>
+                                    <a target="_blank" class="dropdown-item" href="blog/devozy_Setup.html">Devozy Setup</a>
+                                    <a target="_blank" class="dropdown-item" href="blog/devozy_trend.html">DevOps Trends</a>
                             </li>
-                            <li><a href="index.html#Pricing" class="nav-link">Pricing</a></li>
-                            <li><a target="_blank" href="https://yozytech.com/" class="nav-link">company</a></li>
+                            <li><a href="#Pricing" class="nav-link">Pricing</a></li>
+                            <li><a href="faq.html" class="nav-link">FAQ</a></li>
+                            <li><a href="contact-us.html" class="nav-link">Contact</a></li>
                             <!-- <li class="nav-item dropdown">
                                 <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Company</a>
                                 <div class="dropdown-menu border-0 rounded-custom shadow py-0 bg-white">
