--- a/index.html
+++ b/index.html
@@ -445,20 +445,23 @@
                             </div>
                         </div> -->
                             </li>
-                            <li><a href="#premium_devozy_feature" class="nav-link">Features</a></li>
+                            <li><a href="#premium_devozy_feature" class="nav-link">Product</a></li>
 
                             <li class="nav-item dropdown">
                                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
                                     data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                    Resources
+                                    Blog
                                 </a>
                                 <div class="dropdown-menu border-0 mt-1 rounded-custom shadow py-1 bg-white">
-                                    <a class="dropdown-item drop-title" href="Faq.html">FAQ</a>
-                                    <a class="dropdown-item" href="contact-us.html">Contact Us</a>
-
+                                    <a target="_blank" class="dropdown-item drop-title" href="blog/devops_platform_engineering.html">DevSecOps Platform Engineering</a>
+                                    <a target="_blank" class="dropdown-item" href="blog/devops_vs_devsecops.html">DevOps Vs DevSecOps</a>
+                                    <a target="_blank" class="dropdown-item" href="blog/devozy_advantages.html">Devozy Advantages</a>
+                                    <a target="_blank" class="dropdown-item" href="blog/devozy_Setup.html">Devozy Setup</a>
+                                    <a target="_blank" class="dropdown-item" href="blog/devozy_trend.html">DevOps Trends</a>
                             </li>
                             <li><a href="#Pricing" class="nav-link">Pricing</a></li>
-                            <li><a target="_blank" href="https://yozytech.com/" class="nav-link">Company</a></li>
+                            <li><a href="faq.html" class="nav-link">FAQ</a></li>
+                            <li><a href="contact-us.html" class="nav-link">Contact</a></li>
                             <!-- <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Company</a>
                         <div class="dropdown-menu border-0 rounded-custom shadow py-0 bg-white">
@@ -605,7 +608,7 @@
                                 data-bs-title="Dark"><i class="flaticon-moon-1 fs-lg"></i></div>
                         </a> <a href="https://web.devozy.ai/" target="_blank"
                             class="btn btn-link text-decoration-none me-2">Sign In</a>
-                        <a href="request-demo.html" class="btn btn-primary" target="_blank">Get Started</a>
+                        <a href="request-demo.html" class="btn btn-primary" target="_blank">Request Demo</a>
                     </div>
                 </div>
             </nav>
@@ -3772,8 +3775,8 @@
                                                 class="img-fluid rounded-circle me-3">
                                         </div>
                                         <div class="avatar-info">
-                                            <h6 class="mb-0 avatar-name">Admin</h6>
-                                            <span class="small fw-medium text-muted">July 24, 2023</span>
+                                            <h6 class="mb-0 avatar-name">Team Devozy</h6>
+                                            <span class="small fw-medium text-muted">Jan 20, 2024</span>
                                         </div>
                                     </div>
                                 </a>
@@ -3792,7 +3795,7 @@
                                         class="d-inline-block text-primary badge bg-primary-soft">Product</a>
                                 </div>
                                 <a target="_blank" href="blog/devozy_Setup.html">
-                                    <h2 class="h5 article-title limit-2-line-text">DEVOZY – DevOps Tool Setup</h2>
+                                    <h2 class="h5 article-title limit-2-line-text">DEVOZY – Platform Setup</h2>
                                 </a>
                                 <p class="limit-2-line-text">In DEVOZY, we have DEVOPS Tooling expertise to help install
                                     and Configure various DEVOPS Tools and make it up & running for global Enterprise
@@ -3808,8 +3811,8 @@
                                                 class="img-fluid rounded-circle me-3">
                                         </div>
                                         <div class="avatar-info">
-                                            <h6 class="mb-0 avatar-name">Admin</h6>
-                                            <span class="small fw-medium text-muted">june 20, 2023</span>
+                                            <h6 class="mb-0 avatar-name">Team Devozy</h6>
+                                            <span class="small fw-medium text-muted">Jan 20, 2024</span>
                                         </div>
                                     </div>
                                 </a>
@@ -3842,8 +3845,8 @@
                                                 class="img-fluid rounded-circle me-3">
                                         </div>
                                         <div class="avatar-info">
-                                            <h6 class="mb-0 avatar-name">Admin</h6>
-                                            <span class="small fw-medium text-muted">may 24, 2023</span>
+                                            <h6 class="mb-0 avatar-name">Team Devozy</h6>
+                                            <span class="small fw-medium text-muted">Jan 20, 2024</span>
                                         </div>
                                     </div>
                                 </a>
@@ -3862,12 +3865,11 @@
                     <div class="col-lg-8 col-md-10">
                         <div class="subscribe-info-wrap text-center position-relative z-2">
                             <div class="section-heading" data-aos="fade-up">
-                                <h4 class="h5 text-warning">Let's Try! Get Free Support</h4>
-                                <h2>Start Your Free Demo now</h2>
+                                <h4 class="h5 text-warning">Let's Talk! Request for a Demo!</h4>
                                 <p> Experience the power of DEVOZY's expertise today.</p>
                             </div>
                             <div class="form-block-banner mw-60 m-auto mt-5" data-aos="fade-up" data-aos-delay="50">
-                                <a href="request-demo.html" class="btn btn-primary">Get Started</a>
+                                <a href="request-demo.html" class="btn btn-primary">Request Demo</a>
                                 <!-- <a href="http://www.youtube.com/watch?v=hAP2QF--2Dg" class="text-decoration-none popup-youtube d-inline-flex align-items-center watch-now-btn ms-lg-3 ms-md-3 mt-3 mt-lg-0"> <i
                                         class="fas fa-play"></i> Watch Demo </a> -->
                             </div>
