broken link issue fixed

--- a/index.html
+++ b/index.html
@@ -3970,7 +3970,7 @@
                                         <h3>support</h3>
                                         <ul class="list-unstyled footer-nav-list mb-lg-0">
                                             <li><a href="contact-us.html" class="text-decoration-none">Contact</a></li>
-                                            <li><a href="support.html" class="text-decoration-none">FAQ</a></li>
+                                            <li><a href="faq.html" class="text-decoration-none">FAQ</a></li>
                                             <!-- <li><a href="support-single.html" class="text-decoration-none">Support Single</a></li>
                                             <li><a href="team.html" class="text-decoration-none">Our Team</a></li>
                                             <li><a href="client-review.html" class="text-decoration-none">Customer Review</a></li>
