added blog links to homepage

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" data-bs-theme="Dark">
+<html lang="en" data-bs-theme="light">
 
 <head>
     <!--required meta tags-->
@@ -452,6 +452,16 @@
                                     Blog
                                 </a>
                                 <div class="dropdown-menu border-0 mt-1 rounded-custom shadow py-1 bg-white">
+                                    <a target="_blank" class="dropdown-item"
+                                        href="blog/devops_Tools_Strategy.html">Devozy
+                                        Tools and Strategies</a>
+                                    <a target="_blank" class="dropdown-item"
+                                        href="blog/devozy_transformingdevops.html">AI
+                                        Transforms DevOps Automation</a>
+                                    <a target="_blank" class="dropdown-item drop-title"
+                                        href="blog/devops_choosing_configuration_management_tools.html">Choosing
+                                        DevSecOps
+                                        Management Tools</a>
                                     <a target="_blank" class="dropdown-item drop-title"
                                         href="blog/devops_platform_engineering.html">DevSecOps Platform Engineering</a>
                                     <a target="_blank" class="dropdown-item" href="blog/devops_vs_devsecops.html">DevOps
@@ -631,7 +641,43 @@
                     <ul class="nav col-12 col-md-auto justify-content-center main-menu">
                         <li><a href="index.html" class="nav-link">Home</a></li>
                         <li><a href="#premium_devozy_feature" class="nav-link">Features</a></li>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+                                aria-expanded="false">Blog</a>
+                            <div class="dropdown-menu border-0 rounded-custom shadow py-0 bg-white">
+                                <div class="dropdown-grid rounded-custom width-full-3">
+                                    <div class="dropdown-grid-item bg-white radius-left-side">
+                                        <a target="_blank" class="dropdown-item"
+                                            href="blog/devops_Tools_Strategy.html">Devozy
+                                            Tools and Strategies</a>
+                                        <a target="_blank" class="dropdown-item"
+                                            href="blog/devozy_transformingdevops.html">AI
+                                            Transforms DevOps Automation</a>
+                                        <a target="_blank" class="dropdown-item drop-title"
+                                            href="blog/devops_choosing_configuration_management_tools.html">Choosing
+                                            DevSecOps
+                                            Management Tools</a>
+                                        <a target="_blank" class="dropdown-item drop-title"
+                                            href="blog/devops_platform_engineering.html">DevSecOps Platform
+                                            Engineering</a>
+                                        <a target="_blank" class="dropdown-item"
+                                            href="blog/devops_vs_devsecops.html">DevOps
+                                            Vs DevSecOps</a>
+                                        <a target="_blank" class="dropdown-item"
+                                            href="blog/devozy_advantages.html">Devozy
+                                            Advantages</a>
+                                        <a target="_blank" class="dropdown-item" href="blog/devozy_Setup.html">Devozy
+                                            Setup</a>
+                                        <a target="_blank" class="dropdown-item" href="blog/devozy_trend.html">DevOps
+                                            Trends</a>
 
+
+                                    </div>
+
+
+                                </div>
+                            </div>
+                        </li>
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
                                 aria-expanded="false">Resources</a>
@@ -658,6 +704,8 @@
                                 </div>
                             </div>
                         </li>
+
+
                         <!-- <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                         Resources
