--- a/index.html
+++ b/index.html
@@ -444,7 +444,8 @@
                             </div>
                         </div> -->
                             </li>
-                            <li><a href="#premium_devozy_feature" class="nav-link">Product</a></li>
+                            <li><a href="#premium_devozy_feature" class="nav-link">Features</a></li>
+
 
                             <li class="nav-item dropdown">
                                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
@@ -678,22 +679,25 @@
                                 </div>
                             </div>
                         </li>
-                        <li class="nav-item dropdown">
+                        <li><a href="#Pricing" class="nav-link">Pricing</a></li>
+                        <li><a href="faq.html" class="nav-link">FAQ</a></li>
+                        <li><a href="contact-us.html" class="nav-link">Contact Us</a></li>
+                        <!-- <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
                                 aria-expanded="false">Resources</a>
                             <div class="dropdown-menu border-0 rounded-custom shadow py-0 bg-white">
                                 <div class="dropdown-grid rounded-custom width-full-3">
                                     <div class="dropdown-grid-item bg-white radius-left-side">
-                                        <!-- <h6 class="drop-heading">FAQ</h6> -->
+                                        <h6 class="drop-heading">FAQ</h6>
                                         <a href="Faq.html" class="dropdown-link">
                                             <span class="me-2">
-                                                <!-- <i class="flaticon-menu"></i> -->
+                                                <i class="flaticon-menu"></i>
                                             </span>
                                             <div class="drop-title">FAQ</div>
                                         </a>
                                         <a href="contact-us.html" class="dropdown-link">
                                             <span class="me-2">
-                                                <!-- <i class="flaticon-menu"></i> -->
+                                                <i class="flaticon-menu"></i>
                                             </span>
                                             <div class="drop-title">Contact Us</div>
                                         </a>
@@ -703,7 +707,7 @@
 
                                 </div>
                             </div>
-                        </li>
+                        </li> -->
 
 
                         <!-- <li class="nav-item dropdown">
@@ -715,8 +719,8 @@
                       <a class="dropdown-item" href="">contact-us</a>
                     
                   </li> -->
-                        <li><a href="#pricing" class="nav-link">Pricing</a></li>
-                        <li><a target="_blank" href="https://yozytech.com/" class="nav-link">Company</a></li>
+
+                        <!-- <li><a target="_blank" href="https://yozytech.com/" class="nav-link">Company</a></li> -->
                         <!-- <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Company</a>
                     <div class="dropdown-menu border-0 rounded-custom shadow py-0 bg-white">
@@ -854,7 +858,7 @@
                     <div class="action-btns mt-4 ps-3">
                         <a href="https://web.devozy.ai/" target="_blank" class="btn btn-outline-primary me-2">Sign
                             In</a>
-                        <a href="request-demo.html" target="_blank" class="btn btn-primary">Get Started</a>
+                        <a href="request-demo.html" target="_blank" class="btn btn-primary">Request Demo</a>
                     </div>
                 </div>
             </div>
