--- a/index.html
+++ b/index.html
@@ -2553,7 +2553,7 @@
                     </div>
                 </div>
             </div>
-            <section class="image-feature  ">
+            <section class="image-feature pt-60 ">
                 <div class="container">
                     <div class="row justify-content-between align-items-center">
                         <div class="col-lg-5 col-12 order-lg-1">
