modified devozy advantage section

--- a/index.html
+++ b/index.html
@@ -473,7 +473,7 @@
                                         Setup</a>
                                     <a target="_blank" class="dropdown-item" href="blog/devozy_trend.html">DevOps
                                         Trends</a>
-                            </li>
+
                             <li><a href="#Pricing" class="nav-link">Pricing</a></li>
                             <li><a href="faq.html" class="nav-link">FAQ</a></li>
                             <li><a href="contact-us.html" class="nav-link">Contact</a></li>
@@ -2555,84 +2555,88 @@
             </div>
             <section class="image-feature pt-60 ">
                 <div class="container">
-                    <div class="row justify-content-between align-items-center">
-                        <div class="col-lg-5 col-12 order-lg-1">
-                            <div class="feature-img-content">
-                                <div class="section-heading" data-aos="fade-up">
-                                    <h2> Challenges with manual DevOps</h2>
+                    <div class="row justify-content-between align-items-center ">
+                        <div class="col-lg-12 col-12 order-1 pt-3">
+                            <div class=" row feature-img-content ">
+                                <div class="col-lg-6 col-12 order-1">
+                                    <div class="section-heading mb-2" data-aos="fade-up">
+                                        <h2> Challenges with manual DevOps</h2>
 
+                                    </div>
+                                    <div class="app-two-feature-two-content">
+                                        <ul class="list-unstyled d-flex flex-wrap flex-column  mt-4" data-aos="fade-up"
+                                            data-aos-delay="50">
+                                            <li class="py-1">
+                                                <i class="fas fa-times-circle me-2 text-danger"></i>Maintain 3 teams and
+                                                pool of
+                                                Engineers
+                                            </li>
+
+                                            <li class="py-1">
+                                                <i class="fas  fa-times-circle me-2 text-danger"></i>
+                                                Multiple consoles for monitoring servers/jobs/quality check reports
+                                            </li>
+                                            <li class="py-1">
+                                                <i class="fas fa-times-circle me-2 text-danger"></i>
+                                                Additional overhead for Scrum master for managing multiple teams
+                                            </li>
+                                            <li class="py-1">
+                                                <i class="fas  fa-times-circle me-2 text-danger"></i>
+                                                Dependency for deployment automations completion (may take a lot of
+                                                time)
+                                            </li>
+                                            <li class="py-1">
+                                                <i class="fas fa-times-circle me-2 text-danger"></i>
+                                                Duplicate environments
+                                            </li>
+                                            <li class="py-1">
+                                                <i class="fas fa-times-circle me-2 text-danger"></i>
+                                                Multiple hops to troubleshoot issues
+                                            </li>
+
+
+
+                                        </ul>
+                                    </div>
                                 </div>
-                                <div class="app-two-feature-two-content">
-                                    <ul class="list-unstyled d-flex flex-wrap flex-column  mt-4" data-aos="fade-up"
-                                        data-aos-delay="50">
-                                        <li class="py-1">
-                                            <i class="fas fa-times-circle me-2 text-danger"></i>Maintain 3 teams and
-                                            pool of
-                                            Engineers
-                                        </li>
+                                <div class="col-lg-6 col-12 order-0 pt-3">
+                                    <div class="section-heading  mb-2" data-aos="fade-up">
+                                        <h2> Advantages with our Devozy Platform</h2>
 
-                                        <li class="py-1">
-                                            <i class="fas  fa-times-circle me-2 text-danger"></i>
-                                            Multiple consoles for monitoring servers/jobs/quality check reports
-                                        </li>
-                                        <li class="py-1">
-                                            <i class="fas fa-times-circle me-2 text-danger"></i>
-                                            Additional overhead for Scrum master for managing multiple teams
-                                        </li>
-                                        <li class="py-1">
-                                            <i class="fas  fa-times-circle me-2 text-danger"></i>
-                                            Dependency for deployment automations completion (may take a lot of time)
-                                        </li>
-                                        <li class="py-1">
-                                            <i class="fas fa-times-circle me-2 text-danger"></i>
-                                            Duplicate environments
-                                        </li>
-                                        <li class="py-1">
-                                            <i class="fas fa-times-circle me-2 text-danger"></i>
-                                            Multiple hops to troubleshoot issues
-                                        </li>
+                                    </div>
+                                    <div class="app-two-feature-two-content">
+                                        <ul class="list-unstyled d-flex flex-wrap flex-column  mt-4" data-aos="fade-up"
+                                            data-aos-delay="50">
+                                            <li class="py-1">
+                                                <i class="fas fa-check-circle me-2"></i>
+                                                Lean team is sufficient
+                                            </li>
 
-
-
-                                    </ul>
-                                </div>
-
-                                <div class="section-heading" data-aos="fade-up">
-                                    <h2> Advantages with our Devozy Platform</h2>
-
-                                </div>
-                                <div class="app-two-feature-two-content">
-                                    <ul class="list-unstyled d-flex flex-wrap flex-column  mt-4" data-aos="fade-up"
-                                        data-aos-delay="50">
-                                        <li class="py-1">
-                                            <i class="fas fa-check-circle me-2"></i>
-                                            Lean team is sufficient
-                                        </li>
-
-                                        <li class="py-1">
-                                            <i class="fas  fa-check-circle me-2"></i>
-                                            Single unified console for monitoring servers/jobs/quality check reports
-                                        </li>
-                                        <li class="py-1">
-                                            <i class="fas fa-check-circle me-2"></i>
-                                            Scrum master manages only development team
-                                        </li>
-                                        <li class="py-1">
-                                            <i class="fas  fa-check-circle me-2"></i>
-                                            Dependency with Devozy for CICD/Infra make things easier
-                                        </li>
-                                        <li class="py-1">
-                                            <i class="fas fa-check-circle me-2"></i>
-                                            Reuse of environments
-                                        </li>
-                                        <li class="py-1">
-                                            <i class="fas fa-check-circle me-2"></i>
-                                            Easy to troubleshoot issues
-                                        </li>
+                                            <li class="py-1">
+                                                <i class="fas  fa-check-circle me-2"></i>
+                                                Single unified console for monitoring servers/jobs/quality check reports
+                                            </li>
+                                            <li class="py-1">
+                                                <i class="fas fa-check-circle me-2"></i>
+                                                Scrum master manages only development team
+                                            </li>
+                                            <li class="py-1">
+                                                <i class="fas  fa-check-circle me-2"></i>
+                                                Dependency with Devozy for CICD/Infra make things easier
+                                            </li>
+                                            <li class="py-1">
+                                                <i class="fas fa-check-circle me-2"></i>
+                                                Reuse of environments
+                                            </li>
+                                            <li class="py-1">
+                                                <i class="fas fa-check-circle me-2"></i>
+                                                Easy to troubleshoot issues
+                                            </li>
 
 
 
-                                    </ul>
+                                        </ul>
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -2644,7 +2648,7 @@
                         <img src="final.png"  class="img-fluid  rounded-custom shadow-lg" alt="softtent">
                     </div>
                 </div> -->
-                        <div class="col-lg-6 col-12 order-lg-0">
+                        <div class="col-lg-12 col-12 order-0">
                             <!-- <div class="feature-img-holder p-lg-5 pt-3">
                         <div class="bg-primary-soft p-lg-5 p-3 rounded-custom position-relative d-block feature-img-wrap">
                             <div class="position-relative">
