updated devozy advantage image

--- a/index.html
+++ b/index.html
@@ -2663,8 +2663,11 @@
                                 <div class="img-bg-shape position-absolute ">
                               <!--  <img src="assets/img/integations/shape.svg"   alt="integations"> -->
                                 </div>
-                                <img src="devoposadvantage.png" class="img-fluid  rounded-custom shadow-lg"
+                                <div class="imagediv">
+                                    <img src="./assets/dezoyimages/devozy ai.png" class="img-fluid  rounded-custom shadow-lg"
                                     alt="softtent">
+                                </div>
+                                
                             </div>
                         </div>
 
