--- a/index.html
+++ b/index.html
@@ -876,7 +876,7 @@
                 <div class="row justify-content-center text-center">
                     <div class="col-xl-8 col-lg-10 mb-5">
                         <div class="hero-content-wrap">
-                            <h1 class="fw-bold display-5" data-aos="fade-up"> World Class Agile DevSecOps & Platform Engineering
+                            <h1 class="fw-bold display-5" data-aos="fade-up"> World Class <span class="text-primary">AI Assisted</span> Agile DevSecOps & Platform Engineering
                                 Automations</h1>
                             <p class="lead" data-aos="fade-up" data-aos-delay="50">Empower Your IT Engineering Team & Developers: Self-service
                                 portal provides Agile DevSecOps & Platform Engineering Eco System for faster software
@@ -891,7 +891,7 @@
                         </div>
                     </div>
 
-                    <div class="col-lg-10">
+                    <div class="col-lg-12">
                         <div class="position-relative" data-aos="fade-up" data-aos-delay="200">
                             <ul class="position-absolute animate-element parallax-element widget-img-wrap z-2">
                                 <li class="layer" data-depth="0.04">
@@ -901,7 +901,7 @@
                                     <!-- <img src="assets/img/screen/widget-4.png" alt="widget-img" class="img-fluid widget-img-3 position-absolute shadow-lg rounded-custom"> -->
                                 </li>
                             </ul>
-                            <img src="./assets/dezoyimages/hero.png" alt="dashboard image" class="img-fluid position-relative rounded-custom mt-lg-5">
+                            <img src="./assets/dezoyimages/DevSecOps and Platform Engineering .svg" alt="DevSecOps and Platform Engineering" class="img-fluid position-relative rounded-custom mt-lg-5">
                         </div>
                     </div>
                 </div>
